update the CSS file

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* The offical NewUI 3 CSS file, you CAN NOT copy this without the proper permission*/
-/* NewUI 3 used with permisson from 7Zeb (check https://7zeb.github.io/newui/exce/checker.html */
+/* NewUI 3 used with permisson from 7Zeb (check https://7zeb.github.io/newui/exce/checker.txt */
 
 /* import segoe ui font*/
 @import url('https://fonts.googleapis.com/css2?family=Segoe+UI:wght@400;700&display=swap');
